--- a/app/css/style.css
+++ b/app/css/style.css
@@ -35,6 +35,39 @@
   font-size:  1.125rem;  //18px
 }
 
+/* Keyframes animations  */
+@Keyframes fade-in {
+  from {
+    visibility: hidden;
+  } 1% {
+    visibility: visible;
+    opacity: 0;
+  } to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  animation: fade-in 300ms ease-in-out forwards;
+}
+
+@Keyframes fade-out {
+  from {
+    visibility: visible;
+    opacity: 1;
+  } 99% {
+    visibility: visible;
+    opacity: 0;
+  } to {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+
+.fade-out {
+  animation: fade-out 300ms ease-in-out forwards;
+}
+
 /* Globals */
 
 html {
@@ -98,6 +131,34 @@ button, .button {
   font-weight: 400;
 }
 
+/* Menu respopnsive open  */
+
+header {
+  position: relative;
+}
+
+.header.open .header__menu > span:first-child {
+  transform: rotate(45deg);
+}
+
+.header.open .header__menu > span:nth-child(2) {
+  opacity: 0;
+}
+
+.header.open .header__menu > span:last-child {
+  transform: rotate(-45deg);
+}
+
+.overlay {
+  position: fixed;
+  top: 60px;
+  right: 0;
+  bottom: 0px;
+  left: 0;
+  background-image: linear-gradient(#2d314d, transparent);
+  opacity: 0;
+}
+
 .header nav {
   padding: 1.0625rem 1.5rem;
 }
@@ -118,18 +179,6 @@ button, .button {
 
 .header__menu > span:not(:last-child) {
   margin-bottom: 5px;
-}
-
-.header__menu.open > span:first-child {
-  transform: rotate(45deg);
-}
-
-.header__menu.open > span:nth-child(2) {
-  opacity: 0;
-}
-
-.header__menu.open > span:last-child {
-  transform: rotate(-45deg);
 }
 
 .header__links a {
@@ -181,15 +230,45 @@ button, .button {
   opacity: 0.75;
 }
 
-/* Responsive menu  */
+.mobile-menu {
+  position: absolute;
+  margin: auto;
+  width: 100%;
+  opacity: 0;
+}
 
-@media (max-width: 1023px) {
+.mobile-menu>ul {
+  text-decoration: none;
+  list-style-type:none;
+  background-color: white;
+  margin: 0;
+  padding: 4%;
+  border-radius: 5px;
+}
+
+.mobile-menu li {
+  text-align: center;
+  padding: 3% 0;
+}
+
+.mobile-menu a {
+  color: black;
+}
+
+.mobile-menu a:hover {
+  color: hsl(136, 65%, 51%);
+}
+
+
+/* Media queries  */
+
+@media (max-width: 768.98px) {
   .hide-for-mobile {
     display: none;
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 769px) {
   .hide-for-desktop {
     display: none;
   }
