--- a/app/css/style.css
+++ b/app/css/style.css
@@ -29,10 +29,10 @@
 
 /* Font Sizes */
 .font-sm {
-  font-size: 0.875rem; //14px
+  font-size: 0.875rem;
 }
 .font-m {
-  font-size:  1.125rem;  //18px
+  font-size:  1.125rem; 
 }
 
 /* Keyframes animations  */
@@ -48,7 +48,7 @@
 }
 
 .fade-in {
-  animation: fade-in 300ms ease-in-out forwards;
+  animation: fade-in 250ms ease-in-out forwards;
 }
 
 @Keyframes fade-out {
@@ -65,7 +65,7 @@
 }
 
 .fade-out {
-  animation: fade-out 300ms ease-in-out forwards;
+  animation: fade-out 250ms ease-in-out forwards;
 }
 
 /* Globals */
@@ -89,6 +89,11 @@ body {
   font-weight: 300;
   font-size: 1.125rem;
   color: #9698a6;
+}
+
+.container {
+  width: 80%;
+  margin: auto;
 }
 
 a, a:visited, a:hover {
@@ -157,10 +162,11 @@ header {
   left: 0;
   background-image: linear-gradient(#2d314d, transparent);
   opacity: 0;
+  z-index: -1;
 }
 
 .header nav {
-  padding: 1.0625rem 1.5rem;
+  padding: 1.0625rem 0;
 }
 
 .header__logo img {
@@ -232,9 +238,11 @@ header {
 
 .mobile-menu {
   position: absolute;
-  margin: auto;
-  width: 100%;
+  width: 80%;
   opacity: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: -1;
 }
 
 .mobile-menu>ul {
@@ -259,17 +267,164 @@ header {
   color: hsl(136, 65%, 51%);
 }
 
+.mobile-menu a:active {
+  color: hsl(136, 65%, 51%);
+}
+
+/* Hero Section  */
+
+.hero {
+  background-color:hsl(220, 16%, 96%);
+  height: 30rem;
+  display: flex;
+}
+
+.bannerIntro {
+  flex: 1;
+  flex-direction: column;
+  max-width: 50%;
+  padding-left: 10%;
+}
+
+.bannerIntro h1 {
+  color: black;
+  font-size: 3rem;
+  font-weight: 300;
+  margin: 0 0 1rem 0;
+}
+
+.bannerIntro p {
+  margin: 0 0 1rem 0;
+}
+
+.bannerIntro div {
+  margin-top: 1rem;
+}
+
+.bannerImage {
+  flex: 1;
+  background-image: url(../../images/bg-intro-desktop.svg);
+  background-size: 125%;
+  background-position: 28% 72%;
+  position: relative;
+}
+
+.bannerImage::after {
+  content: "";
+  position: absolute;
+  width: 80%;
+  height: 130%;
+  background-image: url(../../images/image-mockups.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: 116%;
+  left: 20%;
+}
+
+/* Hero Section  */
+
 
 /* Media queries  */
 
-@media (max-width: 768.98px) {
+@media (max-width: 768px) {
   .hide-for-mobile {
     display: none;
   }
 }
 
-@media (min-width: 769px) {
+@media (min-width: 768.98px) {
   .hide-for-desktop {
     display: none;
   }
 }
+
+/* HeroSection */
+
+@media (min-width: 992px) and (max-width: 1200px) {
+  .bannerImage::after {
+    height: 115%;
+  }
+}
+
+@media (min-width: 768.98px) and (max-width: 991.98px) {
+  .bannerImage::after {
+    height: 115%;
+  }
+}
+
+@media (min-width: 600.98px) and (max-width: 768px) {
+  .bannerIntro h1 {
+    font-size: 200%;
+  }
+
+  .hero {
+    height: 22rem;
+  }
+
+  .bannerImage {
+    background-size: 150%;
+    background-position: 17% 99%;
+  }
+
+  .bannerImage::after {
+    height: 115%;
+  }
+}
+
+@media (max-width: 600px) {
+  .container {
+    width: 90%;
+  }
+  
+  .hero {
+    height: 50rem;
+    flex-direction: column-reverse;
+  }
+
+  .bannerIntro {
+    max-width: 100%;
+    padding: 0 5% 10% 5%;
+    align-items: center;
+    text-align: center;
+  }
+
+  .bannerIntro h1 {
+    font-size: 200%;
+  }
+
+  .bannerImage {
+    background-repeat: no-repeat;
+    background-size: 149%;
+    background-position: 38% 91%;
+    overflow: hidden;
+  }
+
+}
+
+@media (min-width: 425.98px) and (max-width: 600px) {
+  .bannerImage::after {
+    width: 115%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: 67%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50% );
+  }
+}
+
+@media (max-width: 425px) {
+  .bannerImage::after {
+    width: 115%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: 67%;
+    left: 50%;
+    top: 30%;
+    transform: translate(-50%, -50% );
+  }
+}
+
+/* HeroSection */
