--- a/app/css/style.css
+++ b/app/css/style.css
@@ -330,19 +330,10 @@ header {
 
 /* Hero Section  */
 
-/* Presentation Section  */
-
-.presentation {
-  background-color: hsl(220, 16%, 96%);
-}
+/* Main  */
 
 .presentation > .container, .articles > .container {
   padding: 5% 0;
-}
-
-.presentation-heading {
-  margin-bottom: 5%;
-  width: 60%;
 }
 
 .presentation h2, .articles h2 {
@@ -357,6 +348,19 @@ header {
 
 .presentation .box, .articles-cards .card {
   width: 23%;
+}
+
+/* Main  */
+
+/* Presentation Section  */
+
+.presentation {
+  background-color: hsl(220, 16%, 96%);
+}
+
+.presentation-heading {
+  margin-bottom: 5%;
+  width: 60%;
 }
 
 /* Presentation Section  */
@@ -385,16 +389,17 @@ header {
   padding: 1.5rem;
 }
 
-.card-content p {
-  margin: 0;
-}
-
 .card-content .author {
   font-size: 60%;
 }
 
 .card-content h3 {
   font-size: 100%;
+  transition: all 150ms ease-in-out;
+}
+
+.card-content h3:hover {
+  color: hsl(136, 65%, 51%);
 }
 
 .card-content .article-abstract {
@@ -403,6 +408,68 @@ header {
 
 /* Articles Section  */
 
+/* Footer  */
+
+footer {
+  background-color: hsl(233, 26%, 24%);
+}
+
+footer > .container {
+  display: flex;
+  justify-content: space-between;
+  padding: 3% 0;
+}
+
+footer > .container > div:first-child {
+  display: flex;
+  justify-content: space-between;
+  width: 55%;
+}
+
+.logosocials, .copyrights {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer__logo {
+  width: 8.8125rem;
+  height: 1.375rem;
+}
+
+.socials img {
+  margin-right: 2%;
+}
+
+.footer-links {
+  display: flex;
+  width: 50%;
+}
+
+footer ul {
+  width: 50%;
+  padding: 0;
+}
+
+footer li {
+  list-style-type: none;
+}
+
+footer a {
+  color: white;
+  padding-bottom: 1%;
+}
+
+.copyrights div {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.copyrights p {
+  margin-bottom: 0;
+}
+
+/* Footer  */
 
 /* Media queries  */
 
@@ -417,8 +484,6 @@ header {
     display: none;
   }
 }
-
-/* HeroSection */
 
 @media (min-width: 992px) and (max-width: 1200px) {
   .bannerImage::after {
@@ -450,13 +515,13 @@ header {
     height: 115%;
   }
 
-  .presentation-heading {
-    width: 100%;
-  }
-
   .presentation .box, .articles-cards .card {
     width: 45%;
     margin-bottom: 3%;
+  }
+
+  .presentation-heading {
+    width: 100%;
   }
 }
 
@@ -494,17 +559,16 @@ header {
 
   .presentation > .container, .articles > .container  {
     padding: 12% 0;
-}
+  }
+
+  .presentation .box, .articles-cards .card  {
+    width: 100%;
+    margin-bottom: 5%;
+  }
 
   .presentation-heading {
     width: 100%;
     margin-bottom: 15%;
-  }
-
-  
-  .presentation .box, .articles-cards .card  {
-    width: 100%;
-    margin-bottom: 5%;
   }
 
   .illustration img {
@@ -539,4 +603,3 @@ header {
   }
 }
 
-/* HeroSection */
